// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-ticket Renders \`extra-details-ticket\` with full tickets 1`] = `
<div><span class="v-badge time-line-flag v-badge--overlap"><span class="c-extra-details__badge blue"><i aria-hidden="true" class="v-icon material-icons theme--light white--text" style="font-size: 16px;">report_problem</i></span>
  <transition-stub name="fab-transition"><span class="v-badge__badge transparent"><i aria-hidden="true" class="v-icon extra-details-ticket__badge-icon material-icons theme--light error--text" style="font-size: 14px;">error</i></span></transition-stub>
  </span><span class="v-tooltip c-extra-details extra-details-ticket v-tooltip--top"><transition-stub name="slide-y-reverse-transition"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"></div></transition-stub></span></div>
`;

exports[`extra-details-ticket Renders \`extra-details-ticket\` with full tickets and without failed last ticket 1`] = `
<div><span class="v-badge time-line-flag v-badge--overlap"><span class="c-extra-details__badge blue"><i aria-hidden="true" class="v-icon material-icons theme--light white--text" style="font-size: 16px;">report_problem</i></span>
  <transition-stub name="fab-transition"><span class="v-badge__badge transparent" style="display: none;"><i aria-hidden="true" class="v-icon extra-details-ticket__badge-icon material-icons theme--light error--text" style="font-size: 14px;">error</i></span></transition-stub>
  </span><span class="v-tooltip c-extra-details extra-details-ticket v-tooltip--top"><transition-stub name="slide-y-reverse-transition"><div class="v-tooltip__content" style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"></div></transition-stub></span></div>
`;
